--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,25 +2,10 @@ version: 2
 jobs:
   build:
     docker:
-      # CircleCI Go images available at: https://hub.docker.com/r/circleci/golang/
       - image: circleci/golang:1.8
-
-    working_directory: /go/src/github.com/as/a
-
-    environment:
-      TEST_RESULTS: /tmp/results
-
+    working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
     steps:
       - checkout
-      - run: mkdir -p $TEST_RESULTS
-      test: 
-		pre:
-			- go test -v .../
-			pwd: /go/src/github.com/as/frame
-			
-      - store_artifacts:
-          path: /tmp/results
-          destination: raw-test-output
-
-      - store_test_results:
-          path: /tmp/results
+      - run: go get -v -t -d ./...
+      - run: go test -v github.com/as/frame
+	  - run: go test -v ./...
