--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,5 @@ jobs:
     steps:
       - checkout
       - run: go get -v -t -d ./...
-      - run: go test -v github.com/as/frame
-	  - run: go test -v ./...
+      - run: go test -v github.com/as/frame-
+      - run: go test -v ./...
